--- a/Week-1/Exercise1.2/stylesheets/index.css
+++ b/Week-1/Exercise1.2/stylesheets/index.css
@@ -134,7 +134,23 @@ table {
   border-spacing: 0;
 }
 
-.container {
+.page-container {
   display: grid;
   grid-template-columns: 5% 1fr;
+}
+
+.side-menu {
+  background-color: #f0f0f0;
+  left: 0;
+  top: 0;
+  height: 90vh;
+  width: 100%;
+}
+
+.side-menu-list {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
