--- a/Week-2/Exercise2.1/stylesheets/index.css
+++ b/Week-2/Exercise2.1/stylesheets/index.css
@@ -101,10 +101,16 @@ ul {
 }
 
 
+
 /* content */
 .contentContainer {
   align-items: center;
   margin-top: 5rem;
+}
+
+.content:hover {
+  border-color: #6096B4;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
 }
 
 img {
@@ -134,6 +140,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.5s ease-out;
 }
 
 .para {
