--- a/Week-2/Exercise2.1/stylesheets/index.css
+++ b/Week-2/Exercise2.1/stylesheets/index.css
@@ -22,7 +22,7 @@ ul {
 /* Body css */
 .container {
   width: 100%;
-  height: 250vh;
+  height: 300vh;
   background-color: #BDCDD6;
   display: grid;
   grid-template-columns: 1fr;
@@ -152,22 +152,28 @@ img {
 
 /* footer */
 .footerContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.designFooter {
-  height: 15vh;
+.formContainer {
+  height: 50vh;
   width: 100%;
   background-color: #6096B4;
 }
 
-.formContainer {
+.formWrapper {
   background-color: #6096B4;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30%;
+  padding: 0.5 rem;
 }
 
-.formField {
-  display: flex;
-  justify-content: space-between;
+.formWrapper input {
+  margin-left: 10rem;
 }
+
 
